--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,6 @@ baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'The beauty of Machine Learning'
 theme = "paper"
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
